# registry

./: BATCH_README.md  Dockerfile.batch  LICENSE  README.md  SECRETS_SETUP.md  discussion.html  discussion.md  docker-compose.prod.yml  docker-compose.yml  make_slides.sh  pyproject.toml  run_batch.sh  run_batch_example.sh  submit_batch_job.sh  upload_secrets.sh
docker/: .dockerignore  Dockerfile  README.md  entrypoint.sh
examples/: query_synapses.py
scripts/: example.py  table_to_deltalake.py
themes/: aibs.css
