[project]
dependencies = [
    "caveclient>=8.0.1",
    "cloud-volume>=12.10.0",
    "cloudpathlib>=0.23.0",
    "deltalake>=1.4.2",
    "ipykernel>=7.2.0",
    "polars>=1.38.1",
    "shapely>=2.1.2",
]
description = "Add your description here"
name = "registry"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
